--- a/src/main/resources/templates/adminpanel/adminpanel.html
+++ b/src/main/resources/templates/adminpanel/adminpanel.html
@@ -7,36 +7,26 @@
 <head th:replace="layout :: head"></head>
 <title>Admin Panel</title>
 <body>
+
     <div th:replace="layout :: vertical_navbar"></div>
 
     <div class="page-content p-5">
-        <div class="">
-            <div class="row">
-                <div class="col">
-                    <h3><span class="material-icons-outlined">admin_panel_settings</span> Admin Panel</h3>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
-                        <i class="material-icons-outlined md-36">list</i>
-                    </a>
-                </div>
+        <div class="row">
+            <h3><span class="material-icons-outlined">admin_panel_settings</span> Admin Panel</h3>
+            <div class="col d-flex justify-content-end">
+                <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
+                    <i class="material-icons-outlined md-36">list</i>
+                </a>
             </div>
-
-            <hr>
-            <p>
-                Welcome Back <span sec:authentication="principal.username"></span>!
-            </p>
-            <hr>
-
         </div>
+
+        <hr>
+        <p>
+            Welcome Back <span sec:authentication="principal.username"></span>!
+        </p>
+        <hr>
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-            integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-            integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-            crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </html>
