--- a/src/main/resources/templates/adminpanel/list-users.html
+++ b/src/main/resources/templates/adminpanel/list-users.html
@@ -4,21 +4,23 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
-<head th:replace="layout :: head">
-</head>
+<head th:replace="layout :: head"></head>
 <title>Admin Panel</title>
 <body>
-<div th:replace="layout :: vertical_navbar"></div>
 
-<div class="page-content p-5">
-    <div class="">
+    <div th:replace="layout :: vertical_navbar"></div>
+
+    <div class="page-content p-5">
         <div class="row">
-            <div class="col">
-                <h3><span class="material-icons-outlined align-baseline">admin_panel_settings</span> Admin Panel / List of Users</h3>
-            </div>
+            <h3><span class="material-icons-outlined align-baseline">admin_panel_settings</span> Admin Panel / List of Users</h3>
             <div class="col d-flex justify-content-end">
-                <a th:href="@{/adminpanel/users/addUser}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New User">
-                    <i class="material-icons-outlined md-36">person_add</i></a>
+
+                <!-- Modal to Create New User -->
+                <a  class="btn btn-link newBtn" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New User">
+                    <i class="material-icons-outlined md-36">person_add</i>
+                </a>
+
+                <!-- Refresh User List -->
                 <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
                     <i class="material-icons-outlined md-36">list</i>
                 </a>
@@ -29,49 +31,151 @@
             Welcome Back <span sec:authentication="principal.username"></span>!
         </p>
         <hr>
+        <div th:if="${usersAccounts != null and not #lists.isEmpty(usersAccounts)}">
+            <span th:text="${#lists.size(usersAccounts)}"></span> Users were found
+        </div>
+        <div th:if="${usersAccounts == null or #lists.isEmpty(usersAccounts)}">No Users were found
+        </div>
         <table class="table table-sm table-striped table-hover">
             <caption>List of users</caption>
             <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Username</th>
-                <th scope="col">Hashed Password</th>
-                <th scope="col">Role</th>
-                <th scope="col">Enabled</th>
-                <th scope="col">Assigned to...</th>
-                <th scope="col">Action</th>
-            </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Hashed Password</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Enabled</th>
+                    <th scope="col">Assigned to...</th>
+                    <th scope="col">Action</th>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="tempUserAccount : ${usersAccounts}">
-                <th th:text="${tempUserAccount.userId}" scope="row"></th>
-                <td th:text="${tempUserAccount.userName}"></td>
-                <td th:text="${tempUserAccount.password}"></td>
-                <td th:text="${tempUserAccount.role}"></td>
-                <td th:text="${tempUserAccount.enabled}"></td>
-                <td th:text="${tempUserAccount.employee}"></td>
-                <td>
-                    <a th:href="@{/adminpanel/users/update(id=${tempUserAccount.userId})}" class="btn btn-link"
-                       data-bs-toggle="tooltip" data-bs-placement="top" title="Update User">
-                        <i class="material-icons-outlined">edit</i></a>
-                    <a th:href="@{/adminpanel/users/delete(id=${tempUserAccount.userId})}" class="btn btn-link"
-                       style="color: red" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete User"
-                       onclick="if (!(confirm('Are you sure you want to delete this user?'))) return false">
-                        <i class="material-icons-outlined">delete</i>
-                    </a>
-                </td>
-            </tr>
+                <tr th:each="users : ${usersAccounts}">
+                    <th th:text="${users.userId}" scope="row"></th>
+                    <td th:text="${users.userName}"></td>
+                    <td th:text="${users.password}"></td>
+                    <td th:text="${users.role}"></td>
+                    <td th:text="${users.enabled}"></td>
+                    <td th:text="${users.employee}"></td>
+                    <td>
+                        <a th:href="@{/adminpanel/users/update(id=${users.userId})}" class="btn btn-link editBtn"
+                           data-bs-toggle="tooltip"
+                           data-bs-placement="top" title="Update User"><i class="material-icons-outlined">edit</i></a>
+                        <a th:href="@{/adminpanel/users/delete(id=${users.userId})}" class="btn btn-link"
+                           style="color: red" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete User"
+                           onclick="if (!(confirm('Are you sure you want to delete this user?'))) return false">
+                            <i class="material-icons-outlined">delete</i>
+                        </a>
+                    </td>
+                </tr>
             </tbody>
         </table>
-    </div>
-</div>
+        <!--#Modal form for user update-->
+        <div class="userFormUpdate">
+            <form class="form-signin" th:action="@{save}" method="post">
+                <div class="modal fade" data-backdrop="static" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="updateModalLabel">Update User</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p class="alert alert-info">
+                                    Input data to the fields
+                                </p>
+                                <div class="form-group">
+                                    <input type="hidden" class="form-control" id="userId" name="userId" value="" />
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="userName" name="userName" value="" placeholder="Username" />
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" id="password" name="password" value="" placeholder="Password" />
+                                </div>
+                                <div class="form-group">
+                                    <select class="custom-select" id="role" name="role" >
+                                        <option th:each="roles : ${T(dev.sda.team2.pma.enums.UserRoles).values()}"
+                                                th:value="${roles}" th:text="${roles}"></option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        Please select a valid Role
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <select class="form-control" type="checkbox" id="enabled" name="enabled" >
+                                        <option value="true">Active</option>
+                                        <option value="false">Inactive</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-link float-right" type="submit" data-bs-toggle="tooltip" data-bs-placement="top" title="Save">
+                                    <i class="material-icons-outlined md-36">save_alt</i>
+                                </button>
+                                <button type="button" class="btn btn-link" data-dismiss="modal"><i class="material-icons-outlined md-36">close</i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!--End update form-->
+        <!--#Modal for user create-->
+        <div class="userFormCreate">
+            <form class="form-signin" th:action="@{save}"  method="post">
+                <div class="modal fade" data-bs-backdrop="static" id="userModalCreate" tabindex="-1" role="dialog" aria-labelledby="modalLabelCreate" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="modalLabelCreate">Create user</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p class="alert alert-info">
+                                    Input data to the fields
+                                </p>
+                                <div class="form-group">
+                                    <input type="text" class="form-control"  id="userName" name="userName" value="" placeholder="Username" required/>
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" id="password" name="password" value="" placeholder="Password" required />
+                                </div>
+                                <div class="form-group">
+                                    <select class="custom-select" id="role" name="role" required>
+                                        <option th:each="roles : ${T(dev.sda.team2.pma.enums.UserRoles).values()}"
+                                                th:value="${roles}" th:text="${roles}"></option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        Please select a valid Role
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <select class="form-control" type="checkbox" name="enabled" id="enabled">
+                                        <option value="true">Active</option>
+                                        <option value="false">Inactive</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-link float-right" type="submit" data-bs-toggle="tooltip" data-bs-placement="top" title="Save">
+                                    <i class="material-icons-outlined md-36">save_alt</i>
+                                </button>
+                                <button type="button" class="btn btn-link" data-dismiss="modal"><i class="material-icons-outlined md-36">close</i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!--End form-->
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-        crossorigin="anonymous"></script>
+    </div>
+    <script type ="text/javascript" th:src="@{/js/userAccountsModals.js}" src="../../static/js/userAccountsModals.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
