--- a/src/main/resources/templates/contacts/contact-form.html
+++ b/src/main/resources/templates/contacts/contact-form.html
@@ -4,18 +4,15 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
-<head th:replace="layout :: head">
-</head>
+<head th:replace="layout :: head"></head>
 <title>Contacts</title>
 <body>
-<div th:replace="layout :: vertical_navbar"></div>
 
-<div class="page-content p-5">
-    <div class="">
+    <div th:replace="layout :: vertical_navbar"></div>
+
+    <div class="page-content p-5">
         <div class="row">
-            <div class="col">
-                <h3><span class="material-icons-outlined">people</span> List of Users / Create Contact</h3>
-            </div>
+            <h3><span class="material-icons-outlined">people</span> List of Users / Create Contact</h3>
             <div class="col d-flex justify-content-end">
                 <a th:href="@{/contacts/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
                     <i class="material-icons-outlined md-36">list</i></a>
@@ -26,100 +23,93 @@
             Welcome Back <span sec:authentication="principal.username"></span>!
         </p>
         <hr>
-    </div>
-    <div>
-        <form class="form-signin" th:action="@{/contacts/save}" th:object="${contact}" method="post" >
-            <input type="hidden" th:field="*{contactId}" />
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{firstName}" placeholder="First Name" required/>
-                    <div class="invalid-feedback">Please enter a First Name</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{middleName}" placeholder="Middle Name"/>
-                    <div class="invalid-feedback">Please enter a Middle Name</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{lastName}" placeholder="Last Name"/>
-                    <div class="invalid-feedback">Please enter a Last Name</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{title}" placeholder="Title"/>
-                    <div class="invalid-feedback">Please enter a Title</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{addressLine1}" placeholder="Address 1"/>
-                    <div class="invalid-feedback">Please enter a Address</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{addressLine2}" placeholder="Address 2"/>
-                    <div class="invalid-feedback">Please enter a Address</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{city}" placeholder="City"/>
-                    <div class="invalid-feedback">Please enter a City</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{zipCode}" placeholder="ZipCode"/>
-                    <div class="invalid-feedback">Please enter a ZipCode</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="text" class="form-control" th:field="*{contactPhone}" placeholder="Contact Phone"/>
-                    <div class="invalid-feedback">Please enter a Contact Phone</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <input type="email" class="form-control" th:field="*{contactEmail}" placeholder="Contact Email"/>
-                    <div class="invalid-feedback">Please enter a Contact Email</div>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col-md-3 mb-3">
-                    <select class="custom-select" th:field="*{gender}">
-                        <option th:each="genders : ${T(dev.sda.team2.pma.enums.Gender).values()}"
-                                th:value="${genders}" th:text="${genders}"></option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select a Gender
+        <div>
+            <form class="form-signin" th:action="@{/contacts/save}" th:object="${contact}" method="post" >
+                <input type="hidden" th:field="*{contactId}" />
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{firstName}" placeholder="First Name" required/>
+                        <div class="invalid-feedback">Please enter a First Name</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{middleName}" placeholder="Middle Name"/>
+                        <div class="invalid-feedback">Please enter a Middle Name</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{lastName}" placeholder="Last Name"/>
+                        <div class="invalid-feedback">Please enter a Last Name</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{title}" placeholder="Title"/>
+                        <div class="invalid-feedback">Please enter a Title</div>
+                        <div class="valid-feedback">Looks good!</div>
                     </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" th:field="*{isClosed}" id="inlineFormCheck"/>
-                    <label class="form-check-label" for="inlineFormCheck">
-                        Closed
-                    </label>
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{addressLine1}" placeholder="Address 1"/>
+                        <div class="invalid-feedback">Please enter a Address</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{addressLine2}" placeholder="Address 2"/>
+                        <div class="invalid-feedback">Please enter a Address</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{city}" placeholder="City"/>
+                        <div class="invalid-feedback">Please enter a City</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
                 </div>
-            </div>
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{zipCode}" placeholder="ZipCode"/>
+                        <div class="invalid-feedback">Please enter a ZipCode</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="text" class="form-control" th:field="*{contactPhone}" placeholder="Contact Phone"/>
+                        <div class="invalid-feedback">Please enter a Contact Phone</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <input type="email" class="form-control" th:field="*{contactEmail}" placeholder="Contact Email"/>
+                        <div class="invalid-feedback">Please enter a Contact Email</div>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-3 mb-3">
+                        <select class="custom-select" th:field="*{gender}">
+                            <option th:each="genders : ${T(dev.sda.team2.pma.enums.Gender).values()}"
+                                    th:value="${genders}" th:text="${genders}"></option>
+                        </select>
+                        <div class="invalid-feedback">
+                            Please select a Gender
+                        </div>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" th:field="*{isClosed}" id="inlineFormCheck"/>
+                        <label class="form-check-label" for="inlineFormCheck">
+                            Closed
+                        </label>
+                    </div>
+                </div>
 
-            <div class="col-auto">
-                <a type="button" class="btn btn-link float-right" th:href="@{/contacts/list-contacts}" data-bs-toggle="tooltip" data-bs-placement="top" title="Close">
-                    <i class="material-icons-outlined md-36">close</i></a>
-                <button class="btn btn-link float-right" type="submit" data-bs-toggle="tooltip" data-bs-placement="top" title="Save">
-                    <i class="material-icons-outlined md-36">save_alt</i></button>
-            </div>
-        </form>
+                <div class="col-auto">
+                    <a type="button" class="btn btn-link float-right" th:href="@{/contacts/list-contacts}" data-bs-toggle="tooltip" data-bs-placement="top" title="Close">
+                        <i class="material-icons-outlined md-36">close</i></a>
+                    <button class="btn btn-link float-right" type="submit" data-bs-toggle="tooltip" data-bs-placement="top" title="Save">
+                        <i class="material-icons-outlined md-36">save_alt</i></button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
 <!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-        crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </html>
