--- a/src/main/resources/templates/errors/error-???.html
+++ b/src/main/resources/templates/errors/error-???.html
@@ -4,31 +4,22 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
-<head th:replace="layout :: head">
-</head>
+<head th:replace="layout :: head"></head>
 <title>Error ???</title>
 <body>
+
     <div th:replace="layout :: vertical_navbar"></div>
 
     <div class="page-content p-5">
-        <div class="">
-
-            <h3 style="color: red"><span class="material-icons-outlined">report</span> ??? | What was it?!</h3>
-            <hr>
-            <p>
-                We have no idea what happened her...
-            </p>
-            <hr>
-
-        </div>
+        <h3 style="color: red"><span class="material-icons-outlined">report</span> ??? | What was it?!</h3>
+        <hr>
+        <p>
+            We have no idea what happened her...
+        </p>
+        <hr>
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-            integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-            integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
